tests/neg/multiparamlist-overload-3.6.check
-- [E007] Type Mismatch Error: tests/neg/multiparamlist-overload-3.6.scala:33:21 ---------------------------------------
33 |    val r = f(new B)(new A) // error since resolves to R2 in 3.6 (and 3.7) as expected
   |                     ^^^^^
   |                     Found:    A
   |                     Required: B
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg/multiparamlist-overload-3.6.scala:20:10 ----------------------------------------------------------
20 |  val r = f(new B)(new C) // resolves to R1 in 3.6
   |          ^
   |          Overloading resolution for arguments (B)(C) between alternatives
   |           (x: B)(y: B): R3
   |           (x: B)(y: A): R2
   |           (x: A)(y: C): R1
   |          will change.
   |          Current choice           : (x: A)(y: C): R1
   |          New choice from Scala 3.7: (x: B)(y: B): R3
-- Warning: tests/neg/multiparamlist-overload-3.6.scala:40:12 ----------------------------------------------------------
40 |    val r = f(new B)(new A) // resolves to R1 in 3.6
   |            ^
   |            Overloading resolution for arguments (B)(A) between alternatives
   |             (x: B)(y: C): R3
   |             (x: B)(y: B): R2
   |             (x: A)(y: A): R1
   |            will change.
   |            Current choice           : (x: A)(y: A): R1
   |            New choice from Scala 3.7: none
